Remove grid display that caused layout issues

--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ html {
     BlinkMacSystemFont, sans-serif;
   color: #111;
   background-color: #fefefe;
-  display: grid;
-  place-items: center;
-  min-height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
